8186716: [MVT] C2 crashes with "assert(!n->is_ValueType()) failed: value types should not be split through phis"

Reviewed-by: roland