src/hotspot/share/opto/node.cpp
@@ -504,9 +504,6 @@ Node *Node::clone() const {
   if (cast != NULL && cast->has_range_check()) {
     C->add_range_check_cast(cast);
   }
-  if (n->is_ValueTypePtr()) {
-    C->add_value_type_ptr(n->as_ValueTypePtr());
-  }
 
   n->set_idx(C->next_unique()); // Get new unique index as well
   debug_only( n->verify_construction() );
@@ -539,6 +536,9 @@ Node *Node::clone() const {
   }
   if (n->is_SafePoint()) {
     n->as_SafePoint()->clone_replaced_nodes();
+  }
+  if (n->is_ValueTypeBase()) {
+    C->add_value_type(n);
   }
   return n;                     // Return the clone
 }
@@ -615,8 +615,8 @@ void Node::destruct() {
   if (cast != NULL && cast->has_range_check()) {
     compile->remove_range_check_cast(cast);
   }
-  if (is_ValueTypePtr()) {
-    compile->remove_value_type_ptr(as_ValueTypePtr());
+  if (is_ValueTypeBase()) {
+    compile->remove_value_type(this);
   }
 
   if (is_SafePoint()) {
@@ -1358,8 +1358,8 @@ static void kill_dead_code( Node *dead, PhaseIterGVN *igvn ) {
       if (cast != NULL && cast->has_range_check()) {
         igvn->C->remove_range_check_cast(cast);
       }
-      if (dead->is_ValueTypePtr()) {
-        igvn->C->remove_value_type_ptr(dead->as_ValueTypePtr());
+      if (dead->is_ValueTypeBase()) {
+        igvn->C->remove_value_type(dead);
       }
       igvn->C->record_dead_node(dead->_idx);
       // Kill all inputs to the dead guy
